--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class ="col-md-12">
-          <nav class="navbar navbar-dark bg-dark">
+          <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
               <a class="navbar-brand" href="#">Menu</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
